fix bug with deflection impact